--- a/projectData.json
+++ b/projectData.json
@@ -6,7 +6,13 @@
 			"imageURL": "/images/highlights_parkPlayground.jpg",
 			"shortDescription": "Combining math and playtime to help kids learn more about math.",
 			"description": "In school, children often struggle with geometry. As a concerned mother, I decided to help my children learn geometry better by playing games with them. Eventually, my husband made them a slide made out of hexagons, and we would test them on how to find the interior angles, the different sides if they were chopped up into different shapes, etc. When our children began to tackle their assignments with more enthusiasm, we decided that this could help other children. Thanks to Come Together, and our great community, we were able to crowd-source enough team mates and funds so that a playground based around a geometry theme could be built on an abandoned lot next to a neighbor's home. Our family and everyone else's are just amazed at how coming together to help our children has enriched their lives greatly.",
-			"status": "completed"
+			"status": "completed",
+			"organizer": "Mia Rodriguez",
+			"contactInfo": "619-781-5378",
+			"progressStatus": "100%",
+			"peopleNeeded": "People experienced in construction, anyone who knows the law, and anyone in the community who is interested!",
+			"meetingTime": "Wednesdays @ 8:30PM",
+			"meetingLocation": "Zambetta Community Center"
 		},
 		{
 			"id": "1",
@@ -14,7 +20,13 @@
 			"imageURL": "/images/highlights_japaneseGarden.jpg",
 			"shortDescription": "Providing serenity and peace of mind in a backyard garden.",
 			"description": "Years ago, I traveled to China and studied Zen Buddhism in a small temple. The experience taught me so much that when I decided to come back to the States, I vowed to spread the teachings I had been enlightened by. As a small way of doing so, I went on Come Together and asked my neighbors to help me convert my backyard into a full Zen garden, \"Zensation\". Once interested members joined my team, we came up with a great plan and managed to accrue enough money to execute construction. Within a few months, Zensation was completed and was opened to the community. Everyone is now much more healthy and joyful thanks to the capabilities of Come Together!",
-			"status": "completed"
+			"status": "completed",
+			"organizer": "Zenyatta Harkinson",
+			"contactInfo": "619-882-4396",
+			"progressStatus": "100%",
+			"peopleNeeded": "Garden Designers, Landscape Architects, and any interested parties.",
+			"meetingTime": "Mondays @ 7:00PM",
+			"meetingLocation": "Please call the number for the address"
 		},
 		{
 			"id": "2",
@@ -22,7 +34,13 @@
 			"imageURL": "/images/highlights_petWatch.jpg",
 			"shortDescription": "Neighbors looking for your lost pet before you even ask.",
 			"description": "The day we lost our dog, King Maximus, was absolutely heartbreaking. When the entire neighborhood started keeping an eye out for him, one of our family's friends said, \"You know, if only we could have somehow looked for Maximus before you guys even noticed he was gone.\" That's when our family rallied the neighbors and came up with Lost Pet Watch, a system where you and your neighbors can keep track of your pets' locations. If at any time our pets' whereabouts were unknown or off the radar, everyone with the app would be alerted and on the search. Thanks to Come Together, Lost Pet Watch has been able to save countless pets from being lost.",
-			"status": "completed"
+			"status": "completed",
+			"organizer": "Karen Orlando",
+			"contactInfo": "korlando1987@notemail.com",
+			"progressStatus": "100%",
+			"peopleNeeded": "Computer Programmers, anyone tech-savvy, and concerned pet owners!!!",
+			"meetingTime": "Thursdays @ 7:20PM",
+			"meetingLocation": "Robertson & Lee Pet Kennel"
 		},
 		{
 			"id": "3",
@@ -30,7 +48,13 @@
 			"imageURL": "/images/highlights_tutor.jpg",
 			"shortDescription": "After school tutoring service for K-12 at no cost for the local community.",
 			"description": "A couple of months ago, our local school's standardized test scores started to drop to unacceptable levels. The PTA gathered and said that enough was enough; our children need to improve their study habits and understanding of the school material in order to succeed. To enlist the help of other childrens' parents, we used Come Together to ensure that our children would start improving their grades and ultimatley become smarter than before. Fast forward to now, and Mental Excellence has helped our school rock the test scores by placing us at first in the district. From the PTA, other parents, and our children: Thank you, Come Together!",
-			"status": "completed"
+			"status": "completed",
+			"organizer": "Patricia Thanh Kim",
+			"contactInfo": "pTKWarren@groupmail.edu OR 520-219-9615",
+			"progressStatus": "100%",
+			"peopleNeeded": "Teachers, Tutors, Parents, and anyone who is knowledgeable in any number of fields. Degrees not necessary!",
+			"meetingTime": "Fridays @ 6:00PM",
+			"meetingLocation": "Mangleranne Elementary School (room 274)"
 		},
 		{
 			"id": "4",
@@ -38,7 +62,13 @@
 			"imageURL": "/images/highlights_jazz.jpg",
 			"shortDescription": "Crowd-sourced jazz band for kids.",
 			"description": "Nowadays, music programs across the country have been shut down due to budget cuts on the education system. Music has been shown to enrich childrens' lives by increasing their intelligence and keeping them away from bad influences after school. Jazz For Education initially began as a solo endeavor by Trevor P. Martinni in order to teach local children the joy of music, particularly through jazz. However, when he found that more instruments and a bigger practice space were necessary, Trevor utilized Come Together and managed to gain the funds needed from the local community, and even beyond. Now, Jazz For Education is on its way to becoming an integrated part of the local school system!",
-			"status": "completed"
+			"status": "completed",
+			"organizer": "Trevor P. Martinni",
+			"contactInfo": "https://jazzforeducation.org/contact/",
+			"progressStatus": "100%",
+			"peopleNeeded": "Donors to help with funding instruments, local warehouse owners for practice spaces. And any amount is appreciated!",
+			"meetingTime": "Tuesdays and Thursdays @ 3:30PM",
+			"meetingLocation": "Jefferson Middle School"
 		}
 	],
 
@@ -49,7 +79,13 @@
 			"imageURL": "/images/trending_fwyProject.jpg",
 			"shortDescription": "Freeway expansion project to help alleviate traffic.",
 			"description": "About a year ago, my son almost crashed on the freeway during rush hour. When he came home with a look of terror in his eyes, I knew something had to be done. Luckily, a friend of mine recommended Come Together to do something about the narrow lanes in the freeway, and now I am asking you, the citizens of this wonderful area, to come together and make our freeways a safer place for everyone.",
-			"status": "active"
+			"status": "active",
+			"organizer": "Mathilda Brownschild",
+			"contactInfo": "facebook.com/mathildabrownschild or openFreeway@rotomail.com",
+			"progressStatus": "58%",
+			"peopleNeeded": "Construction experts, urban designers, anyone who believes in a safer freeway.",
+			"meetingTime": "Sundays @ 4:00PM",
+			"meetingLocation": "Please message me on facebook or email me for the meeting location."
 		},
 		{
 			"id": "1",
@@ -57,7 +93,13 @@
 			"imageURL": "/images/trending_fixPotholes.jpg",
 			"shortDescription": "Fixing up potholes in local streets.",
 			"description": "Like most people in my area, I love my hometown. It's the city I grew up in and where I created cherishable memories with friends and family. What saddened me over the years was seeing it degrade in quality, especially the local roads. When my car hit what was probably the one-thousandth pothole that week, I said that enough is enough; someone needs to fix up our roads. Join me in creating a company that is geared towards taking care of these pesky roadside obstacles.",
-			"status" : "active"
+			"status" : "active",
+			"organizer": "Samuel Hahn",
+			"contactInfo": "potholeRepair@fixitmail.com",
+			"progressStatus": "33%",
+			"peopleNeeded": "Strong men willing to do some heavy lifting and construction, anyone skilled in business and entrepreneurship.",
+			"meetingTime": "Mondays and Thursdays @ 6:45PM",
+			"meetingLocation": "Manuella Public Library, Conference Room 8"
 		},
 		{
 			"id": "2",
@@ -65,7 +107,13 @@
 			"imageURL": "/images/trending_beach.jpg",
 			"shortDescription": "Clearing up the city beach to help the local wildlife.",
 			"description": "As an animal rights activist and environmental engineer, my whole life has been dedicated towards protecting the beautiful wildlife that lives around us. Recently, an accident with an oil tanker has contaminated the waters of a beach next to the freeway, and the animal life is suddenly in great danger. Please consider saving the wildlife at the beach and keeping our environment healthy and clean!",
-			"status": "active"
+			"status": "active",
+			"organizer": "Cliff Redford",
+			"contactInfo": "602-796-0375",
+			"progressStatus": "61%",
+			"peopleNeeded": "Community members with the heart to help save our local ecosystem.",
+			"meetingTime": "Saturdays @ 7:00AM",
+			"meetingLocation": "Viviana Beach"
 		},
 		{
 			"id": "3",
@@ -73,7 +121,13 @@
 			"imageURL": "/images/trending_seniors.jpg",
 			"shortDescription": "Cheering up the elderly by letting the community conveniently interact with them.",
 			"description": "As we grow older we become immensely preoccupied with our jobs, family, and social lives. However, what occurs when all of that is suddenly gone? The senior citizens of my town have expressed that they feel alone and wish for some company. Knowing that not everyone can dedicate so much time towards visiting the elderly, my sister and I created \"Letters to Elders\", a community outreach program which aims to provide interested parties and the elderly with a way of communicating via hand-written letters. We are in need of money for stationary supplies and volunteers to write letters and help transport them if possible. Thank you for reading this, and we hope you decide to cheer up a senior citizen's day!",
-			"status": "active"
+			"status": "active",
+			"organizer": "Hellen St. John Elderly Care Home",
+			"contactInfo": "480-271-7663",
+			"progressStatus": "90%",
+			"peopleNeeded": "Volunteers who are willing to take some time out of their day to communicate with the elderly, and anyone who can donate.",
+			"meetingTime": "Please send letters by drop-off or mail no later than Thursdays@5pm.",
+			"meetingLocation": "Hellen St. John Elderly Care Home"
 		},
 		{
 			"id": "4",
@@ -81,7 +135,13 @@
 			"imageURL": "/images/trending_refugee.jpg",
 			"shortDescription": "Helping refugee children to integrate into the community better through help with language.",
 			"description": "With the ongoing refugee crisis, more and more children are dropped into an unsympathetic school system that does not care about their needs. While these children are in danger of falling behind if they cannot catch up with the curriculum, there is a way to prevent them from failing. Please consider joining a local team of community members as we help these students improve upon their language and mathematical skills so that they can stride toward a brighter future.",
-			"status": "active"
+			"status": "active",
+			"organizer": "Refugee Tutoring@Renaldo High",
+			"contactInfo": "928-819-2666",
+			"progressStatus": "87%",
+			"peopleNeeded": "Local community members willing to spare some time to tutor refugee students after school.",
+			"meetingTime": "Wednesdays @ 4:00pm",
+			"meetingLocation": "Renaldo High School"
 		}
 	],
 
